--- a/style/main.css
+++ b/style/main.css
@@ -73,6 +73,8 @@ header nav a:hover{
 
     padding: 15px 30px;
     margin-right: 15px;
+    margin-top: 5px;
+    margin-bottom: 5px;
     font-size: 12px;
 
     cursor: pointer;
@@ -98,7 +100,7 @@ header nav a:hover{
 }
 
 .box-filme{
-    height: 100%;
+    height: 400px;
     width: 100%;
     display: block;
 }
