--- a/style/main.css
+++ b/style/main.css
@@ -43,7 +43,7 @@ header nav a:hover{
 /*Filme Principal*/
 .filme-principal{
     font-size: 16px;
-    background:linear-gradient(rgba(0,0,0,.50),rgba(0,0,0,.50)100%), url('/img/naruto\ classico\ capa.jpg');
+    background:linear-gradient(rgba(0,0,0,.50),rgba(0,0,0,.50)100%), url('/img/naruto classico capa.jpg');
 
     height: 950px;
     background-size:cover;
